# crypto_strategy_project

./: .gitattributes  .gitignore  README.md  deploy.sh  optimize_atr_tp_sl.py  pull_request_template.md  pyproject.toml  requirements.txt  run_bot.bat  run_realtime.sh  trader-once.service  trader-once.timer  train_h16_dynamic_full.py
ISSUE_TEMPLATE/: issue-4-signal-aggregator.md  project-log.md
audit_h16/: correlation.csv  drift_ks.csv  psi.csv  summary_stats.csv
backtests/: BCHUSDT_summary.json  BCHUSDT_summary.zh.json  BCHUSDT_trades.csv  BTCUSDT_summary.json  BTCUSDT_summary.zh.json  BTCUSDT_trades.csv  ETHUSDT_summary.json  ETHUSDT_summary.zh.json  ETHUSDT_trades.csv  bt_summary.json  bt_trades.csv  equity_curve_bars_BCHUSDT.csv  equity_curve_bars_BTCUSDT.csv  equity_curve_bars_ETHUSDT.csv  summary_all.json  summary_all.zh.json  summary_all_equity.zh.json  summary_bchusdt.zh.json  summary_btcusdt.zh.json  summary_ethusdt.zh.json
config/: config.py  config.yaml  strategy_config.yaml
core/: feature.py  strategy_regression.py
csp/: __init__.py  notify.py
csp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: atr_tp_sl_all_trades_sample.csv  atr_tp_sl_grid_summary.csv  atr_tp_sl_top15.csv  btc_15m_data_360days.csv  btc_15m_data_3days.csv  data_module.py  feature_engineering.py
h16_dynamic/: cls_model_h16.pkl  opt_h16_dynamic.json  scaler_h16.joblib  trades_h16.csv
logs/: trades.csv
model/: feature_audit_h16.py  feature_engineering_h16.py  model_module.py  train_model_cls.py  xgb_cls_model.json  xgb_cls_scaler.joblib
models/: xgb_cls_meta.yaml  (+2 more)
(+134 files in other folders)
